--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Games Murah & Terpercaya</title>
+    <title>Walz Shop - Top Up Murah, Aman, dan Cepat</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://i.supaimg.com/023005b8-5541-4175-8563-072978e05973.jpg" type="image/x-icon">
@@ -13,7 +13,7 @@
         <div class="container">
             <h1 class="logo">Walz Shop</h1>
             <nav class="nav-menu">
-                <a href="#" class="nav-link active">Beranda</a>
+                <a href="index.html" class="nav-link active">Beranda</a>
                 <a href="#" class="nav-link">Tentang Kami</a>
                 <a href="#" class="nav-link">Kontak</a>
             </nav>
@@ -23,16 +23,15 @@
     <main class="main-content">
         <div class="container">
             <section class="promo-section">
-                <h2>Promo Spesial Hari Ini</h2>
                 <div class="slider-container">
-                    <div class="slider-track" id="promo-slider"></div>
-                    <div class="slider-dots" id="slider-dots"></div>
+                    <div id="promo-slider" class="slider-track"></div>
+                    <div id="slider-dots" class="slider-dots"></div>
                 </div>
             </section>
-
+            
             <section class="game-section">
-                <h2>Pilihan Top Up Game</h2>
-                <div class="game-list" id="games-grid">
+                <h2>Pilihan Game</h2>
+                <div id="games-grid" class="game-grid">
                     </div>
             </section>
         </div>
