--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Murah, Aman, dan Cepat</title>
+    <title>Walz Shop - Beranda</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://i.supaimg.com/023005b8-5541-4175-8563-072978e05973.jpg" type="image/x-icon">
 </head>
 <body>
@@ -28,11 +28,11 @@
                     <div id="slider-dots" class="slider-dots"></div>
                 </div>
             </section>
-            
+
             <section class="game-section">
-                <h2>Pilihan Game</h2>
+                <h2 class="section-title">Pilih Game Anda</h2>
                 <div id="games-grid" class="game-grid">
-                    </div>
+                </div>
             </section>
         </div>
     </main>
