--- a/game.html
+++ b/game.html
@@ -10,14 +10,16 @@
 <body>
     <div class="container">
         <header class="header">
-            <a href="index.html">
-                <img src="https://i.ibb.co/6Pz3KqB/logo-walzshop.png" alt="Logo Walz Shop" class="logo">
-            </a>
+            <a href="index.html" class="back-btn"><i class="fas fa-arrow-left"></i> Kembali</a>
+            <img src="https://i.ibb.co/6Pz3KqB/logo-walzshop.png" alt="Logo Walz Shop" class="logo">
         </header>
 
         <section class="game-info">
-            <img src="" alt="Game Banner" class="game-banner" id="game-banner">
-            <h2 id="game-title"></h2>
+            <div class="game-header">
+                <img src="" alt="Game Icon" class="game-icon" id="game-icon">
+                <h2 id="game-title"></h2>
+            </div>
+            <p class="game-description" id="game-description"></p>
         </section>
 
         <section class="step-section">
@@ -30,7 +32,6 @@
                 <label for="server-id">Server ID</label>
                 <input type="text" id="server-id" placeholder="Masukkan Server ID Anda">
             </div>
-            <p class="game-description" id="game-description"></p>
         </section>
 
         <section class="step-section">
