--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
         </section>
     </div>
 
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2024 Walz Shop. Semua Hak Dilindungi.</p>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-tiktok"></i></a>
+                <a href="#"><i class="fab fa-whatsapp"></i></a>
+            </div>
+            <ul class="footer-links">
+                <li><a href="#">Tentang Kami</a></li>
+                <li><a href="#">Syarat & Ketentuan</a></li>
+                <li><a href="#">Kebijakan Privasi</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
